// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correct LoginPageForm with error 1`] = `
<div
  className="sign-in user-page__content"
>
  <form
    action="#"
    className="sign-in__form"
    onSubmit={[Function]}
  >
    <div
      className="sign-in__message"
    >
      <p>
        We can’t recognize this email 
        <br />
         and password combination. Please try again.
      </p>
    </div>
    <div
      className="sign-in__fields"
    >
      <div
        className="sign-in__field sign-in__field--error"
      >
        <input
          className="sign-in__input"
          id="user-email"
          name="user-email"
          placeholder="Email address"
          type="email"
        />
        <label
          className="sign-in__label visually-hidden"
          htmlFor="user-email"
        >
          Email address
        </label>
      </div>
      <div
        className="sign-in__field"
      >
        <input
          className="sign-in__input"
          id="user-password"
          name="user-password"
          placeholder="Password"
          type="password"
        />
        <label
          className="sign-in__label visually-hidden"
          htmlFor="user-password"
        >
          Password
        </label>
      </div>
    </div>
    <div
      className="sign-in__submit"
    >
      <button
        className="sign-in__btn"
        type="submit"
      >
        Sign in
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render correct LoginPageForm without error 1`] = `
<div
  className="sign-in user-page__content"
>
  <form
    action="#"
    className="sign-in__form"
    onSubmit={[Function]}
  >
    <div
      className="sign-in__fields"
    >
      <div
        className="sign-in__field "
      >
        <input
          className="sign-in__input"
          id="user-email"
          name="user-email"
          placeholder="Email address"
          type="email"
        />
        <label
          className="sign-in__label visually-hidden"
          htmlFor="user-email"
        >
          Email address
        </label>
      </div>
      <div
        className="sign-in__field"
      >
        <input
          className="sign-in__input"
          id="user-password"
          name="user-password"
          placeholder="Password"
          type="password"
        />
        <label
          className="sign-in__label visually-hidden"
          htmlFor="user-password"
        >
          Password
        </label>
      </div>
    </div>
    <div
      className="sign-in__submit"
    >
      <button
        className="sign-in__btn"
        type="submit"
      >
        Sign in
      </button>
    </div>
  </form>
</div>
`;
